Add Github Actions workflow (#256)
* Add Github Actions workflow

* Fix build on macosx

- Set a default JVM install (needed for macosx on github actions)

* Add step and script to publish current snapshot site

* Generate changelog for snapshot and add it to site

* Add and use maven wrapper

* Add minimal documentation